10-06-2025 ... 0.9.1.0 ... PSQT Tuning 2 ........................ (156.6 +/- 29.9), (8 + 0.08), (N = 400), (Local)
10-08-2025 ... 0.9.2.0 ... PSQT Tuning 3 ........................ (54.7 +/- 19.1) , (8 + 0.08), (N = 800), (Local)
11-17-2025 ... 0.9.3.0 ... QS SEE Pruning ....................... (11.9 +/- 8.8)  , (8 + 0.08), (SPRT, 3184),(https://sscg13.pythonanywhere.com/test/1534/)
11-17-2025 ... 0.9.3.1 ... Makefile Build Compat Changes
11-22-2025 ... 1.0.0.0 ... NNUE ................................. (270.3 +/- 55.9), (8 + 0.08), (SPRT, 198), (https://sscg13.pythonanywhere.com/test/1571/)
11-23-2025 ... 1.0.1.0 ... Multithread Bookgen, L1 = 64 ......... (165.6 +/- 37.5), (8 + 0.08), (SPRT, 230), (https://sscg13.pythonanywhere.com/test/1575/)
11-24-2025 ... 1.0.1.1 ... Generation TT
11-25-2025 ... 1.0.2.0 ... Cubic Quiet History Bonus ............ (6.2 +/- 5.0)   , (8 + 0.08), (SPRT, 7148),(https://sscg13.pythonanywhere.com/test/1592/)
11-27-2025 ... 1.0.3.0 ... Internal Iterative Reductions ........ (13.1 +/- 9.0)  , (8 + 0.08), (SPRT, 2200),(https://sscg13.pythonanywhere.com/test/1603/)
11-27-2025 ... 1.0.4.0 ... Late Move Pruning .................... (6.1 +/- 4.9)   , (8 + 0.08), (SPRT, 7700),(https://sscg13.pythonanywhere.com/test/1606/)
11-27-2025 ... 1.0.5.0 ... Futility Pruning ..................... (15.9 +/- 10.2) , (8 + 0.08), (SPRT, 1754),(https://sscg13.pythonanywhere.com/test/1608/)
11-29-2025 ... 1.0.6.0 ... PVS SEE Pruning ...................... (5.4 +/- 4.3)   , (8 + 0.08), (SPRT, 9050),(https://sscg13.pythonanywhere.com/test/1618/)
12-01-2025 ... 1.0.7.0 ... Less LMR ............................. (29.4 +/- 14.8) , (8 + 0.08), (SPRT, 842) ,(https://sscg13.pythonanywhere.com/test/1631/)
12-02-2025 ... 1.0.8.0 ... L1 = 128 ............................. (119.4 +/- 33.7), (8 + 0.08), (SPRT, 266) ,(https://sscg13.pythonanywhere.com/test/1640/)
