@@ -7,12 +7,7 @@ History::History(){
 }
 
 void History::empty(){
-    for (Piece p = King; p < None; p++){
-        for (Square sq = a8; sq < XX; sq++){
-            quiet[White][p][sq] = 0;
-            quiet[Black][p][sq] = 0;
-        }
-    }
+    std::memset(&quiet, 0, sizeof(quiet));
 }
 
 void History::updateQuiet(const Move& m, const Color& c, int t){
@@ -22,7 +17,7 @@ void History::updateQuiet(const Move& m, const Color& c, int t){
     int16_t s = static_cast<int16_t>(std::clamp(t, static_cast<int>(-QUIET_HISTORY_LIM), 
         static_cast<int>(QUIET_HISTORY_LIM)));
 
-    quiet[c][p][sq] += (s - quiet[c][p][sq] * s / QUIET_HISTORY_LIM);
+    quiet[c][p][sq] += (s - quiet[c][p][sq] * std::abs(s) / QUIET_HISTORY_LIM);
 }
 
 int16_t History::quietEntry(const Move& m, const Color& c){
